@@ -1086,6 +1086,14 @@ programmer
 ;
 
 programmer
+  id    = "jtag3updi";
+  desc  = "Atmel AVR JTAGICE3 in UPDI mode";
+  type  = "jtagice3_updi";
+  connection_type = usb;
+  usbpid = 0x2110, 0x2140;
+;
+
+programmer
   id    = "jtag3dw";
   desc  = "Atmel AVR JTAGICE3 in debugWIRE mode";
   type  = "jtagice3_dw";
