@@ -1,5 +1,11 @@
 2020-09-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Sven Schwermer:
+	patch #9966: Add JTAGICE3 in UPDI mode
+	* avrdude.conf (jtag3updi): New entry.
+
+2020-09-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Joel Ray Holveck
 	patch #9732: usbtiny_paged_load overflows buffer e.g. when reading EEPROM
 	* usbtiny.c (usbtiny_paged_load, usbtiny_paged_write): ensure chunk
